--- a/main.css
+++ b/main.css
@@ -40,3 +40,115 @@ header nav {
   width: 100%;
   max-width: 1000px;
 }
+
+section {
+  display: flex;
+  justify-content: space-between;
+}
+
+article, aside {
+  display: inline-block;
+  vertical-align: top;
+  text-align: justify;
+}
+
+article {
+  width: 625px;
+  margin-right: 15px;
+}
+
+article p {
+  font-size: 0.8em;
+}
+
+aside {
+  position: relative;
+  width: 235px;
+  background-color: #706b64;
+  box-shadow: 0px 2px 5px #1c1a19;
+  border-radius: 5px;
+  padding: 10px;
+  color: white;
+  font-size: 0.9em;
+  height: 100%;
+}
+
+.article-header {
+  display: flex;
+  align-items: center;
+}
+
+.article-header span {
+  margin-left: 8px;
+}
+
+.zozor {
+  text-align: center;
+}
+
+.zozor-pic {
+  display: flex;
+  justify-content: center;
+}
+
+.zozor-pic img {
+  border: 1px solid #181818;
+}
+
+.social {
+  display: flex;
+  justify-content: space-between;
+}
+
+.top {
+  margin-top: 8px;
+  display: flex;
+  justify-content: center;
+}
+
+footer {
+  display: flex;
+  margin-top: 8px;
+  justify-content: space-between;
+}
+
+footer .tweet .title {
+  margin-bottom: 8px;
+}
+
+footer .tweet {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+footer .pictures .title {
+  margin-bottom: 8px;
+}
+
+footer .friends .title {
+  margin-bottom: 8px;
+}
+
+footer .friends {
+  width: 200px;
+}
+
+footer .friends .list {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer .friends .text {
+  font-size: 12px;
+}
+
+footer .pictures .content img {
+  width: 50px;
+}
+
+footer .friends .text {
+  font-size: 12px;
+  color: brown;
+  margin: 4px 0;
+}
